<resources>
    <string name="app_name">Shop</string>
    <string name="register">Реєстрація</string>
    <string name="email">Пошта</string>
    <string name="pib">ПІБ</string>
    <string name="image">Фото</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="btn_chose_img">Вибрати фото</string>
    <string name="btn_register">Зареєструватись</string>
    <string name="login">Вхід</string>
    <string name="open">Open navigation Drawer</string>
    <string name="close">Close navigation Drawer</string>
    <string name="category_name">Назва категорії</string>
    <string name="categories">Категорії</string>


</resources>